- clean up output of require ()
- some fixes for R 2.3.0
- pressing Cancel in readline ("R backend requests information") dialog interrupts the command
- process R X11 events while modal dialogs (such as "R backend requests information") are shown
- allow empty input in readline ("R backend requests information") dialog
- make Ctrl+C/copy work in output and help windows

--- Version 0.3.5 - Apr-16-2006
- give back focus to the script editor after running line/selection/all
- reworded exit dialog box
- show info message, if retrieving context help fails
- pressing Ctrl+C in the console resets a partial command, if any
- added syntax highlighting in the console
- configure: if not overriden, and $KDEDIR is not set, assume --prefix=`kde-config --prefix` instead of /usr/local/kde/
- remove some GUI clutter for Script File editor
- rename "Command File" to "Script File"
- rename "Command Stack" window to "Pending Jobs"
- backspace or del clear cells in data.frame editor
- reworked factor levels editor
- in trailing rows/columns of the data.frame editor, change background color, when selected
- explicitely set LC_NUMERIC to "C" at startup. R does not work correctly with other settings of LC_NUMERIC
- many new plugins by Stefan Roediger
- clean up R temporary files on shutdown
- when switching between dialog and wizard interfaces, GUI settings are copied
- fix crash with objects with quotes in their names
- add options to show help-search and R help index to Help menu
- complete rework of plugins code
- plugins can embed other plugins
- code display (for plugins) gets updated reliably
- avoid leftover PHP processes if rkward crashes or gets killed
- autodetection of R_HOME and related variables during configure
- fix status bar
- handle non-existing and non-local URLs (links) in help window
- use a shell wrapper around rkward to do some setup just like R. This should fix a number of minor quirks